# titan_audio_ecosystem

./: .gitignore  Cargo.toml  GEMINI_NOTES.md  README.md  THEORY_OF_CHAOS_2026_05_16.md  build.sh  main-new-phone-optimized.rs  uncertainty_trace_rust.csv
.cargo/: config.toml
src/: main.rs
