[package]
name = "titan_audio_ecosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.0", features = ["cuda"] }
candle-nn = { version = "0.8.0", features = ["cuda"] }
hound = "3.5"
rustfft = "6.1"
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
complex = "0.5"
rayon = "1.8"
