[package]
name = "titan_audio_ecosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.0", features = ["cuda"] }
candle-nn  = { version = "0.8.0", features = ["cuda"] }
hound      = "3.5"
rustfft    = "6.1"
rand       = "0.8"
csv        = "1.3"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"
rayon      = "1.8"

[profile.release]
opt-level     = 3
lto           = "thin"      # link-time optimisation (safe for incremental builds)
codegen-units = 1           # maximise inlining; slower compile, faster runtime
panic         = "abort"     # smaller binary, no unwinding overhead
